@320px Fixing Spacing

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -84,7 +84,7 @@ h3 {
 
 .main-header-container,
 .footer-container {
-    padding: .75rem;
+    padding: .75rem .75rem 1rem .75rem;
     background-color: #f2f2f284;
 }
 
